# tool-slack-automation

./: .gitignore  README.md  app.py  application.py  config.py  data.json  handler.js  intro_keywords.json  jobs.py  local_config.yml.example  package-lock.json  package.json  package:  requirements.txt  run.sh  serverless.yml  skills.py  welcome.md
.github/workflows/: invite-check.yml  slack-invite-check.yml  workspace-analysis.yml
analysis/: .gitignore  __init__.py  categories.json
analysis/corpus/: __init__.py
automation/1password-provisioning/: environment.template  run.sh
automation/choice-provider/: README.md  handler.js  package.json  serverless.yml
automation/onboarding-assistant/: README.md  package.json  smsecrets.json.example
automation/onboarding-assistant/test/: test_app.py
data/: corpus.json  model.json  template.md
examples/: channel_list.py  classifier_model.py  data_visualization.py
matcher/: __init__.py
onboarding-assistant/: README.md  package-lock.json  package.json  serverless.yml
onboarding-assistant/code/: __init__.py  handler.py  pyproject.toml  requirements.txt
onboarding-assistant/code/data/elements/: form.json  introduction.json  success.json  welcome.json
onboarding-assistant/code/menu/: README.md  data.json  handler.js
onboarding-assistant/code/modules/amazon/: __init__.py
onboarding-assistant/code/modules/analytics/: __init__.py
onboarding-assistant/code/modules/database/: __init__.py
onboarding-assistant/code/modules/interface/: __init__.py  form.json  introduction.json  thanks.json  welcome.json
onboarding-assistant/code/modules/maps/: __init__.py
onboarding-assistant/code/modules/matcher/: __init__.py
onboarding-assistant/code/modules/recommendations/: __init__.py  model.json
onboarding-assistant/code/modules/shortener/: __init__.py
onboarding-assistant/code/modules/workstreams/: handler.py
onepassword-provisioning/: README.md  package.json  serverless.yml
onepassword-provisioning/code/: handler.py  pyproject.toml  requirements.txt
onepassword-provisioning/code/modules/onepassword/: __init__.py
onepassword-provisioning/code/views/: end.json  form.json
virtual_environment/: pyvenv.cfg
workspace-analysis/: README.md  pyproject.toml  requirements.txt
workspace-analysis/analysis/: categories.json
workspace-analysis/examples/: classifier_model.py
